--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
     "sweetalert2": "^11.14.0"
