--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,7 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
-    "sweetalert2": "^11.14.0"
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
