--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@mercadopago/sdk-react": "^0.0.19",
+    "@paypal/react-paypal-js": "^8.7.0",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
